--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Sarvadnya\AppData\Local\Temp\testng-eclipse--26024884\testng-customsuite.xml</span>
+                    <span>C:\Users\Sarvadnya\AppData\Local\Temp\testng-eclipse--1556469365\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Sarvadnya\AppData\Local\Temp\testng-eclipse--26024884\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Sarvadnya\AppData\Local\Temp\testng-eclipse--1556469365\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'validateSliderMover')
 data.setCell(0, 2, 'com.jala.qa.testcases.SliderPageTest')
-data.setCell(0, 3, 511);
+data.setCell(0, 3, 1181);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 511 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -207,7 +207,7 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">validateSliderMover</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Slider moved successfully</span>
+                <span class="reporter-method-output">Slider moved smoothly.</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -232,11 +232,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validateSliderMover</span>
-                <span class="method-start">9946 ms</span>
+                <span class="method-start">11143 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">10470 ms</span>
+                <span class="method-start">12326 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
